--- a/angu17035/src/app/pages/home-page/home-page.component.css
+++ b/angu17035/src/app/pages/home-page/home-page.component.css
@@ -49,3 +49,21 @@
   color: #000;
   /*Set to match the Tailwind colour you want the active one to be */
 }
+
+/*  */
+.slideshow-container {
+  max-width: 100%;
+  position: relative;
+  margin: auto;
+}
+
+.slide {
+  display: none;
+}
+
+.btn {
+  padding: 10px 20px;
+  background-color: #000;
+  color: #fff;
+  cursor: pointer;
+}
