--- a/angu17035/src/app/pages/c-product/c-product.component.html
+++ b/angu17035/src/app/pages/c-product/c-product.component.html
@@ -1,5 +1,4 @@
 <app-header/>
-      <app-nav/>
       <!-- Product section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 my-5">
@@ -197,6 +196,4 @@
             </div>
         </section>
         <!-- Footer-->
-<app-footer/>
-
-<app-footer/>
+<!-- <app-footer/> -->
