--- a/angu17035/src/app/pages/admin/add-product/add-product.component.html
+++ b/angu17035/src/app/pages/admin/add-product/add-product.component.html
@@ -1,5 +1,5 @@
 <section>
-  <div id="main" class="main-content flex-1 bg-gray-100 mt-12 md:mt-2 pb-24 md:pb-5">
+  <div id="main" class="main-content flex-1 bg-gray-100 mt-12 md:mt-2 pb-24 md:pb-5 w-[1440px]">
 
     
 
@@ -10,32 +10,33 @@
       </div>
 
       <form action="">
-        <label for="name">name</label>
-        <input type="text">
-        <label for="name">price</label>
-        <input type="text">
-        <label for="name">mô tả</label>
-        <input type="text">
-        <label for="name">đánh giá</label>
-        <input type="text">
-        <label for="name">màu lựa chọn</label>
-        <input type="text">
-        <label for="name">thiết kế</label>
-        <input type="text">
-        <label for="name">mô tả</label>
-        <input type="text">
-        <button>submit</button>
+        
+        <h2 class="p-3">điền form</h2>
+        <label for="">name</label>
+        <input type="text" class="form-control">
+        <label for="">price</label>
+        <input type="text" class="form-control">
+        <label for="">text</label>
+        <input type="text" class="form-control">
+        <label for="">mô tả sản phẩm</label>
+        <textarea name="" id="" cols="30" rows="10" class="form-control"></textarea>
+        
+        
       </form>
      <!--!  -->
 <div class="container">
 
-  <h1 class="text-danger bg-pink-400">nam đẹp trai</h1>
+  <h1 class="text-danger bg-pink-400">nahih</h1>
   <div class="alert alert-success" role="alert">đã thêm thành công </div>
   
   <button type="submit" class="btn btn-primary mr-3">thêm sản phẩm</button>
 
+  <span class="badge bg-warning">thoat</span>
 <!-- / nút không có background -->
 <button type="submit" class="btn btn-outline-warning">cảnh báo </button>
+
+
+
 </div>
 <!-- ! -->
       <div class="flex flex-row flex-wrap flex-grow mt-2">
