--- a/angu17035/src/app/pages/home-page/home-page.component.css
+++ b/angu17035/src/app/pages/home-page/home-page.component.css
@@ -67,3 +67,18 @@
   color: #fff;
   cursor: pointer;
 }
+.origins{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1rem 0;
+  text-align: center;
+}
+
+.origins span{
+  padding: 0.5rem;
+  font-size: 1.2rem;
+  margin: 0.5rem 0.5rem 0.5rem 0;
+  border-radius: 2rem;
+  background-color: aliceblue;
+  
+}
