--- a/angu17035/src/app/pages/signin/signin.component.html
+++ b/angu17035/src/app/pages/signin/signin.component.html
@@ -1,5 +1,4 @@
 <app-header/>
-
         <!-- Header-->
         <div
         id="carouselExampleSlidesOnly"
@@ -18,19 +17,44 @@
                 </a>
                 <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
                     <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-                        <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+                        <h1 style="color:red; text-align: center" class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                             Đăng nhập
                         </h1>
-                        <form class="space-y-4 md:space-y-6" action="#">
+                        <form class="space-y-4 md:space-y-6" action="#" [formGroup]="formSignin" (ngSubmit)="onHandleSubmit()">
                             <div>
-                                <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
-                                <input type="email" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@company.com" required="">
+                                <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" >Email</label>
+                                <input type="email" formControlName="email" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@company.com" required="">
                             </div>
+<!-- [] -->
+                            <div *ngIf="formSignin.get('email')?.hasError('required') && submitted">
+                                Email chưa nhập 
+                            </div>
+                            <div *ngIf="formSignin.get('email')?.hasError('email') && submitted">
+                                Email invalid
+                            </div>
+<!-- [] email -->
                             <div>
                                 <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Mật khẩu</label>
-                                <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
+                                <input type="password"  formControlName="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
                             </div>
-                            <button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Create an account</button>
+                            <!-- [] -->
+                            <div
+                            *ngIf="
+                                formSignin.get('password')?.hasError('password') && submitted
+                            "
+                        >
+                            Mật khẩu là bắt buộc
+                        </div>
+                        <div
+                            *ngIf="
+                                formSignin.get('password')?.hasError('minlength') && submitted
+                            "
+                        >
+                            Mật khẩu phải trên 6 ký tự
+                        </div>
+                            <!-- [] -->
+                            
+                            <button style="color:red; text-align: center ; background-color: red" type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Log In</button>
                             <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                                 Bạn chưa có tài khoản? <a href="signup" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Đăng ký tại đây</a>
                             </p>
@@ -40,6 +64,7 @@
             </div>
           </section>
 
+          
 
           <div
             class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
