trang quản lí tài

--- a/angu17035/src/app/pages/admin/home-admin/home-admin.component.html
+++ b/angu17035/src/app/pages/admin/home-admin/home-admin.component.html
@@ -55,8 +55,8 @@
         <nav aria-label="alternative nav ">
             <div class="bg-gray-800 shadow-xl h-20 fixed bottom-0 mt-12 md:relative md:h-screen z-10 w-full md:w-48 content-center">
 <h1 class="text-[red] text-center p-[20px] bg-[white] mb-[20px] b-[20px] border-8 rounded-xl"><a routerLink="home">Home</a> </h1>
-<h1 class="text-[red] text-center p-[20px] bg-[white] mb-[20px] border-8 rounded-xl"><a routerLink="add">User</a></h1>
-<h1 class="text-[red] text-center p-[20px] bg-[white] border-8 rounded-xl">Product</h1>
+<h1 class="text-[red] text-center p-[20px] bg-[white] mb-[20px] border-8 rounded-xl"><a routerLink="add">Product</a></h1>
+<h1 class="text-[red] text-center p-[20px] bg-[white] border-8 rounded-xl"><a routerLink="user">User</a></h1>
               
 
 
