--- a/angu17035/src/app/pages/admin/add-product/add-product.component.html
+++ b/angu17035/src/app/pages/admin/add-product/add-product.component.html
@@ -1,86 +1,64 @@
 <section>
   <div id="main" class="main-content flex-1 bg-gray-100 mt-12 md:mt-2 pb-24 md:pb-5">
 
-    
+
 
       <div class="bg-gray-800 pt-3">
           <div class="rounded-tl-3xl bg-gradient-to-r from-blue-900 to-gray-800 p-4 shadow text-2xl text-white">
               <h1 class="font-bold pl-2">Quản lý sản phẩm</h1>
           </div>
       </div>
-
+      <a routerLink="/admin/addsp" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">ADD</a>
       <div class="table-responsive p-3">
         <table class="table table-hover">
           <thead class="text-center">
             <tr>
-              <th scope="col" class="md:w-screen">STT</th>
+              <th scope="col" class="md:w-screen">ID</th>
               <th scope="col" class="md:w-screen">Tên sản phẩm</th>
               <th scope="col" class="md:w-screen">Giá</th>
               <th scope="col" class="md:w-screen md:table-cell hidden">Giá gốc</th>
-              <th scope="col" class="md:w-screen">Danh mục</th>
               <th scope="col" class="md:w-screen md:hidden table-cell">Chi tiết</th>
               <th scope="col" class="md:w-screen md:table-cell hidden">
                 Mô tả ngắn
               </th>
-              <th scope="col" class="md:w-screen md:table-cell hidden">Mô tả</th>
-              <th scope="col" class="md:w-screen md:table-cell hidden">
-                Thông số kỹ thuật
-              </th>
+              <th scope="col" class="md:w-screen md:table-cell hidden">Thời gian</th>
               <th scope="col" class="md:w-screen md:table-cell hidden">Hình ảnh</th>
               <th scope="col" class="md:w-screen">Thao tác</th>
             </tr>
           </thead>
-          <tbody >  
+          <tbody >
             <!-- *ngFor="
               let item of products | paginate : { itemsPerPage: 3, currentPage: p };
               index as i
             " -->
-            <tr class="text-center">
-              <th scope="row">1</th>
+            <tr class="text-center" *ngFor="let food of foods,index as i ">
+              <th scope="row">{{food._id+1}}</th>
               <td>
-                <span>Apple iPad mini (6th Gen) Wi-Fi, 2021</span>
-              </td>
-              <td>
-                <span>12.650.000đ</span>
-              </td>
-              <td class="md:table-cell hidden">
-                <span>14.990.000đ</span>
+                <span>{{food.name}}</span>
               </td>
               <td>
-                <span>Apple</span>
+                <span>{{food.realPrice}}</span>
               </td>
-              <td class="md:hidden table-cell">
-                <button type="submit" data-bs-toggle="modal" data-bs-target="#detail_prod">
-                  Xem
-                </button>
+              <td>
+                <span>{{food.price}}</span>
               </td>
-              <td class="md:table-cell hidden">
-                <button type="submit" data-bs-toggle="modal" data-bs-target="#short_description">
-                  <span class="hover:text-blue-500">Xem</span>
-                </button>
+              <td >
+                <span>{{food.des}}</span>
               </td>
-              <td class="md:table-cell hidden">
-                <button type="submit" data-bs-toggle="modal" data-bs-target="#description">
-                  <span class="hover:text-blue-500">Xem</span>
-                </button>
+              <td >
+                <span>{{food.cookTime}}</span>
               </td>
-    
-              <td class="md:table-cell hidden">
-                <button type="submit" data-bs-toggle="modal" data-bs-target="#specifications">
-                  <span class="hover:text-blue-500">Xem</span>
-                </button>
+              <td >
+                <span><img [src]="food.imageUrl" alt=""></span>
               </td>
-              <td class="md:table-cell hidden">
-                <img src="https://thuthuatnhanh.com/wp-content/uploads/2023/03/hinh-anh-cuc-tinh-y.jpg" alt="product"
-                  class="w-[100px] h-[100px]" />
-              </td>
+
               <td>
                 <div class="flex gap-1 justify-center">
-                  <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editProduct">
-                    <span>Sửa</span>
+                  <button routerLink='{{food._id }}' class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editProduct">
+                    <span >Sửa</span>
                   </button>
                   <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete_prod">
-                    <span>Xóa</span>
+                    <span (click) = 'foodRemove(food._id)'>Xóa</span>
                   </button>
                 </div>
               </td>
@@ -88,12 +66,12 @@
           </tbody>
         </table>
       </div>
-    
+
       <div class="flex justify-end mr-5 mt-3">
         <!-- <pagination-controls (pageChange)="p = $event"></pagination-controls> -->
       </div>
     </div>
-    
+
     <!-- The Modal Short description -->
     <div class="modal" id="short_description">
       <div class="modal-dialog">
@@ -102,7 +80,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- The Modal Description -->
     <div class="modal" id="description">
       <div class="modal-dialog">
@@ -111,7 +89,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- The Modal Specifications -->
     <div class="modal" id="specifications">
       <div class="modal-dialog">
@@ -120,7 +98,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- The Modal Edit Product -->
     <div class="modal" id="editProduct">
       <div class="modal-dialog">
@@ -130,12 +108,12 @@
             <h4 class="modal-title">Chỉnh sửa thông tin sản phẩm</h4>
             <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
           </div>
-    
+
           <!-- Modal body -->
           <div class="modal-body">
             <form>Form thông tin sản phẩm</form>
           </div>
-    
+
           <!-- Modal footer -->
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#alert">
@@ -145,7 +123,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- The Modal Edit Product Success -->
     <div class="modal" id="alert">
       <div class="modal-dialog">
@@ -154,7 +132,7 @@
           <div class="modal-header">
             <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
           </div>
-    
+
           <!-- Modal body -->
           <div class="modal-body">
             <div class="alert alert-success">
@@ -164,7 +142,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- The Modal Delete Product -->
     <div class="modal" id="delete_prod">
       <div class="modal-dialog">
@@ -174,12 +152,12 @@
             <h4 class="modal-title">Xóa sản phẩm</h4>
             <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
           </div>
-    
+
           <!-- Modal body -->
           <div class="modal-body">
             <form>Chi tiết sản phẩm muốn xóa</form>
           </div>
-    
+
           <!-- Modal footer -->
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#delete_success">
@@ -189,7 +167,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- The Modal Delete Product Success -->
     <div class="modal" id="delete_success">
       <div class="modal-dialog">
@@ -198,7 +176,7 @@
           <div class="modal-header">
             <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
           </div>
-    
+
           <!-- Modal body -->
           <div class="modal-body">
             <div class="alert alert-success">
@@ -208,7 +186,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- The Modal Detail Product -->
     <div class="modal" id="detail_prod">
       <div class="modal-dialog">
@@ -218,7 +196,7 @@
             <h4 class="modal-title">Tên sản phẩm</h4>
             <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
           </div>
-    
+
           <!-- Modal body -->
           <div class="modal-body">
             <form>Chi tiết sản phẩm</form>
