--- a/angu17035/src/app/pages/admin/home-admin/home-admin.component.html
+++ b/angu17035/src/app/pages/admin/home-admin/home-admin.component.html
@@ -1,5 +1,6 @@
 <body class="bg-gray-800 font-sans leading-normal tracking-normal mt-12">
 <header>
+
     <nav aria-label="menu nav" class="bg-gray-800 pt-2 md:pt-1 pb-1 px-1 mt-0 h-auto fixed w-full z-20 top-0">
 
         <div class="flex flex-wrap items-center">
@@ -46,24 +47,26 @@
         </div>
 
     </nav>
+
 </header>
 
 
 <main>
 
+  <div class="flex flex-col md:flex-row "></div>
     <div class="flex flex-col md:flex-row ">
         <nav aria-label="alternative nav ">
             <div class="bg-gray-800 shadow-xl h-20 fixed bottom-0 mt-12 md:relative md:h-screen z-10 w-full md:w-48 content-center">
 <h1 class="text-[red] text-center p-[20px] bg-[white] mb-[20px] b-[20px] border-8 rounded-xl"><a routerLink="home">Home</a> </h1>
 <h1 class="text-[red] text-center p-[20px] bg-[white] mb-[20px] border-8 rounded-xl"><a routerLink="add">Product</a></h1>
 <h1 class="text-[red] text-center p-[20px] bg-[white] border-8 rounded-xl"><a routerLink="user">User</a></h1>
-              
+
 
 
             </div>
         </nav>
 
-        
+
 <router-outlet ></router-outlet>
     </div>
 </main>
@@ -99,5 +102,5 @@
           }
       }
   }
-</script>  
+</script>
 </body>
